--- a/web/app/components/hero/horizontal_event_component.html.erb
+++ b/web/app/components/hero/horizontal_event_component.html.erb
@@ -20,8 +20,8 @@
 				<%= @event.categories_primary_name.titleize %> ·
 				<%= link_to helpers.limit_place_name_size(@event.place_details_name, 24), place_path(@event.place), class: 'md:hover:underline capitalize' %>
 			</div>
-			<div class="font-light leading-relaxed mt-2 text-gray-700 text-xs">
-				<%= helpers.limit_description_size @event.description %>
+			<div class="font-light mt-2 text-gray-700 text-sm">
+				<%= helpers.limit_description_size @event.description, 120 %>
 			</div>
 			<div class="flex mt-3 space-x-4">
 				<%= content_tag :div, data: { action: 'click->hero--horizontal-event#like', 'event-id': @event.id }, class: 'cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 hover:text-gray-600 items-center justify-center rounded-full select-none tap-highlight-none text-gray-600 text-sm' do %>
