Adjust new badge in feed

--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -27,7 +27,7 @@
 					} rescue nil %>
 				<% end %>
 				<% if helpers.is_new_event? @event %>
-					<div title="Criado nas últimas 24 horas" class="absolute -bottom-2 left-3 px-1 text-xs font-semibold text-white rounded bg-brand-500">NOVO</div>
+					<div title="Criado nas últimas 48 horas" class="-top-2 absolute bg-white border border-gray-100 font-semibold left-3 px-2 py-1 rounded-full shadow text-brand-600 text-xxs">NOVO</div>
 				<% end %>
 			</div>
 		</div>
