--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -22,12 +22,12 @@
 						data:    {
 							'event-id': @event.id
 						},
-						class:   'cursor-pointer object-center object-cover h-full w-full rounded-lg',
+						class:   'cursor-pointer object-center object-cover h-full w-full rounded md:rounded-lg',
 						onerror: "this.style.opacity='0'"
 					} rescue nil %>
 				<% end %>
 				<% if helpers.is_new_event? @event %>
-					<div title="Criado nas últimas 48 horas" class="-top-2 absolute bg-white border border-gray-100 font-semibold left-3 px-2 py-1 rounded-full shadow text-brand-600 text-xxs">NOVO</div>
+					<div title="Criado nas últimas 48 horas" class="absolute -top-2 left-3 py-1 px-2 font-semibold bg-white rounded-full border border-gray-100 shadow text-brand-600 text-xxs">NOVO</div>
 				<% end %>
 			</div>
 		</div>
@@ -64,7 +64,7 @@
 												action:                  'click->main-sidebar--horizontal-event#openEvent',
 												'event-id':              @event.id
 											},
-											class: 'c-h3 inline md:hover:text-brand-600 mb-1' do %>
+											class: 'text-sm md:text-base c-h3 inline md:hover:text-brand-600 mb-1' do %>
 				<%= @event.name %>
 			<% end %>
 			<div class="inline pl-2 text-sm md:pl-0">
@@ -88,7 +88,7 @@
 			<!--				<%#= helpers.format_hour @event.start_time %>h ·-->
 			<%#= link_to @event&.categories_display_name&.titleize, category_events_path(@event.categories_url), data: { 'turbo-preserve-scroll': true }, class: 'md:hover:text-brand-600' %>
 			<!--			</div>-->
-			<div class="<%= helpers.class_names('flex transition-opacity duration-150 mt-2',
+			<div class="<%= helpers.class_names('-ml-3 md:ml-0 flex transition-opacity duration-150 mt-2',
 																					{ 'md:group-hover:opacity-100  md:opacity-0': !@user&.like_or_dislike?(@event) }) %>">
 				<% unless @user&.dislike?(@event) %>
 					<%= content_tag :div,
@@ -127,7 +127,7 @@
 										</svg>-->
 				<%# end %>
 				<%# end %>
-				<div class="<%= helpers.class_names('md:group-hover:opacity-100 md:opacity-0 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 text-brand-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform hover:bg-brand-100 px-2 py-1',
+				<div class="<%= helpers.class_names('md:group-hover:opacity-100 md:opacity-0 cursor-pointer duration-100 ease-linear flex font-medium group hover:px-3 text-gray-500 hover:text-brand-600 items-center justify-center rounded-full select-none tap-highlight-none text-sm transform transition-transform hover:bg-brand-100 px-2 py-1',
 																						{ 'ml-2': !@user&.like?(@event) }) %>"
 						 data-controller="share-button"
 						 data-share-button-text="<%= strip_tags(helpers.limit_description_size(@event.description)) %>"
@@ -135,7 +135,7 @@
 						 data-share-button-url="<%= event_url(@event, format: :html) %>"
 						 data-action="click->share-button#share">
 					<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
-					<svg class="mr-1 h-4 stroke-current text-brand-600" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<svg class="mr-1.5 h-4 stroke-current" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"/>
 					</svg>
 					<div>Compartilhar</div>
