--- a/web/app/views/components/_bottom-navigation.html.erb
+++ b/web/app/views/components/_bottom-navigation.html.erb
@@ -24,7 +24,7 @@
 					 data-action="click->toggle-style#toggle click->go-to#url"
 					 data-toggle-style-identifier="users-agenda"
 					 data-go-to-url="<%= my_agenda_path %>"
-					 class="<%= class_names 'cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
+					 class="<%= class_names 'justify-between cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
 																	'text-brand-500': current_page?('/minha-agenda'),
 																	'text-gray-600':  !current_page?('/minha-agenda') %>">
 				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -37,7 +37,7 @@
 						 data-action="click->toggle-style#toggle click->go-to#url"
 						 data-toggle-style-identifier="users-profile"
 						 data-go-to-url="<%= current_user ? user_path(current_user) : new_user_registration_path %>"
-						 class="<%= class_names 'cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
+						 class="<%= class_names 'justify-between cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100',
 																		'text-brand-500': current_page?(controller: :users, action: :show, id: current_user),
 																		'text-gray-600':  !current_page?(controller: :users, action: :show, id: current_user) %>">
 					<img src="<%= current_user&.picture :small %>" class="w-5 h-5 rounded-full md:mr-5" alt="<%= current_user&.name %>">
@@ -48,7 +48,7 @@
 						 data-action="click->toggle-style#toggle click->go-to#url"
 						 data-toggle-style-identifier="users-profile"
 						 data-go-to-url="<%= new_user_registration_path %>"
-						 class="cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100">
+						 class="justify-between cursor-pointer md:flex-row md:font-semibold md:text-2xl antialiased flex flex-1 flex-col items-center transform transition-transform text-xs duration-100">
 					<div class="w-5 h-5 rounded-full md:mr-5 bg-gray-300"></div>
 					Criar conta
 				</div>
